<resources>
    <string name="app_name">Cindy</string>
    <string name="fala1">Olá, como vai você?</string>
    <string name="fala2">Oi, me vê uma pizza!</string>
    <string name="fala3">Qual sabor você gostaria de escolher?</string>
    <string name="fala4">meia de mussarela e meia portuguesa</string>
    <string name="fala_user">Digite o que você gostaria de dizer:</string>
    <string name="Enter">Falar</string>
    <string name="action_settings">Configurações</string>
    <string name="action_search">Pesquisar</string>
    <string name="action_refresh">Atualizar</string>
    <string name="action_logout">Sair</string>
    <string name="usuario">Usuário:</string>
    <string name="senha">Senha:</string>
    <string name="button_login">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="EsqSenha">Esqueci minha senha</string>
</resources>
