<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorwhite"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="398dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginVertical="16dp"
        android:background="@color/colorwhite"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btnCindy"
            android:layout_width="97dp"
            android:layout_height="96dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:background="#ffffff"
            android:contentDescription="@string/Enter"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnCindy"
            android:layout_margin="10dp"
            android:text="@string/usuario" />
        <!-- Campo de texto para digitar o login -->
        <EditText
            android:id="@+id/tLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt1"
            android:inputType="text"
            android:singleLine="true"
            android:text="admin" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tLogin"
            android:layout_margin="10dp"
            android:text="@string/senha" />

        <EditText
            android:id="@+id/tSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt2"
            android:inputType="textPassword"
            android:singleLine="true"
            android:text="admin" />

        <Button
            android:id="@+id/btLogin"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tSenha"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:onClick="logar"
            android:text="@string/button_login"
            android:textSize="13dp"
            tools:ignore="OnClick" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="5dp">


        <Button
            android:id="@+id/cadastrar_Login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="13dp"
            android:onClick="cadastro"
            android:text="@string/cadastrar" />

        <Button
            android:id="@+id/EsqSenha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="13dp"
            android:text="@string/EsqSenha" />
    </LinearLayout>

</LinearLayout>